affichage departemetns en fonction de région FAIT

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <img src="imgs/carte-france.png" usemap="#image-map" class="centered-img" alt="Carte de la France">
             <!-- mapping réalisé avec http://www.image-map.net/-->
             <map name="image-map">
-                <area target="_self" alt="Bretagne" title="Bretagne" href="choix-departement.php?dep=Bretagne" coords="10,131,69,120,80,137,122,135,139,141,133,176,86,195,21,169" shape="poly">
-                <area target="_self" alt="Normandie" title="Normandie" href="choix-departement.php?dep=Normandie" coords="126,134,209,153,213,131,235,110,230,59,115,75" shape="poly">
-                <area target="_self" alt="Hauts-de-France" title="Hauts-de-France" href="choix-departement.php?dep=Hauts-de-France" coords="245,96,228,58,237,7,319,44,323,86,303,121" shape="poly">
-                <area target="_self" alt="Ile-de-France" title="Ile-de-France" href="choix-departement.php?dep=Ile-de-France" coords="236,113,248,146,290,159,301,147,292,118,263,105" shape="poly">
-                <area target="_self" alt="Grand-Est" title="Grand-Est" href="choix-departement.php?dep=Grand-Est" coords="301,147,330,65,468,107,448,191,399,167,369,185" shape="poly">
-                <area target="_self" alt="Bourgogne-Franche-Compté" title="Bourgogne-Franche-Compté" href="choix-departement.php?dep=Bourgone-Franche-Comté" coords="292,153,320,171,367,186,399,171,439,189,395,255,363,249,326,267,293,233" shape="poly">
-                <area target="_self" alt="Centre-Val de Loire" title="Centre-Val de Loire" href="choix-departement.php?dep=Centre-Val_de_Loire" coords="231,117,245,145,283,162,288,232,224,256,185,211" shape="poly">
-                <area target="_self" alt="Pays de la Loire" title="Pays de la Loire" href="choix-departement.php?dep=Pays_de_la_Loire" coords="143,140,207,158,176,212,147,224,151,254,123,252,86,200,132,177" shape="poly">
-                <area target="_self" alt="Nouvelle Aquitaine" title="Nouvelle Aquitaine" href="choix-departement.php?dep=Nouvelle_Aquitaine" coords="178,213,149,224,155,254,133,265,105,421,154,445,169,411,164,386,204,374,233,329,254,328,262,259" shape="poly">
-                <area target="_self" alt="Auvergne-Rhône-Alpes" title="Auvergne-Rhône-Alpes" href="choix-departement.php?dep=Auvergne-Rhône-Alpes" coords="264,253,285,236,319,264,429,260,442,310,371,361,306,334,259,340" shape="poly">
-                <area target="_self" alt="Provence-Alpes-Côte d'azur" title="Provence-Alpes-Côte d'azur" href="choix-departement.php?dep=Provence-Alpes-Côte_d'azur" coords="425,321,357,368,341,409,429,423,465,373" shape="poly">
-                <area target="_self" alt="Occitanie" title="Occitanie" href="choix-departement.php?dep=Occitanie" coords="231,330,260,349,313,339,355,370,336,405,282,466,160,444,165,389,208,377" shape="poly">
-                <area target="_self" alt="Corse" title="Corse" href="choix-departement.php?dep=Corse" coords="450,439,419,460,435,508,454,511,463,466" shape="poly">
+                <area target="_self" alt="Bretagne" title="Bretagne" href="choix-departement.php?reg=Bretagne" coords="10,131,69,120,80,137,122,135,139,141,133,176,86,195,21,169" shape="poly">
+                <area target="_self" alt="Normandie" title="Normandie" href="choix-departement.php?reg=Normandie" coords="126,134,209,153,213,131,235,110,230,59,115,75" shape="poly">
+                <area target="_self" alt="Hauts-de-France" title="Hauts-de-France" href="choix-departement.php?reg=Hauts-de-France" coords="245,96,228,58,237,7,319,44,323,86,303,121" shape="poly">
+                <area target="_self" alt="Île-de-France" title="Île-de-France" href="choix-departement.php?reg=Île-de-France" coords="236,113,248,146,290,159,301,147,292,118,263,105" shape="poly">
+                <area target="_self" alt="Grand-Est" title="Grand-Est" href="choix-departement.php?reg=Grand-Est" coords="301,147,330,65,468,107,448,191,399,167,369,185" shape="poly">
+                <area target="_self" alt="Bourgogne-Franche-Compté" title="Bourgogne-Franche-Compté" href="choix-departement.php?reg=Bourgone-Franche-Comté" coords="292,153,320,171,367,186,399,171,439,189,395,255,363,249,326,267,293,233" shape="poly">
+                <area target="_self" alt="Centre-Val de Loire" title="Centre-Val de Loire" href="choix-departement.php?reg=Centre-Val_de_Loire" coords="231,117,245,145,283,162,288,232,224,256,185,211" shape="poly">
+                <area target="_self" alt="Pays de la Loire" title="Pays de la Loire" href="choix-departement.php?reg=Pays_de_la_Loire" coords="143,140,207,158,176,212,147,224,151,254,123,252,86,200,132,177" shape="poly">
+                <area target="_self" alt="Nouvelle Aquitaine" title="Nouvelle Aquitaine" href="choix-departement.php?reg=Nouvelle_Aquitaine" coords="178,213,149,224,155,254,133,265,105,421,154,445,169,411,164,386,204,374,233,329,254,328,262,259" shape="poly">
+                <area target="_self" alt="Auvergne-Rhône-Alpes" title="Auvergne-Rhône-Alpes" href="choix-departement.php?reg=Auvergne-Rhône-Alpes" coords="264,253,285,236,319,264,429,260,442,310,371,361,306,334,259,340" shape="poly">
+                <area target="_self" alt="Provence-Alpes-Côte d'azur" title="Provence-Alpes-Côte d'azur" href="choix-departement.php?reg=Provence-Alpes-Côte_d'Azur" coords="425,321,357,368,341,409,429,423,465,373" shape="poly">
+                <area target="_self" alt="Occitanie" title="Occitanie" href="choix-departement.php?reg=Occitanie" coords="231,330,260,349,313,339,355,370,336,405,282,466,160,444,165,389,208,377" shape="poly">
+                <area target="_self" alt="Corse" title="Corse" href="choix-departement.php?reg=Corse" coords="450,439,419,460,435,508,454,511,463,466" shape="poly">
             </map>
 
         </main>
